# scDesign3Py

./: .buildinfo  .gitignore  LICENSE  README.md  environment.yaml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  readthedocs.yaml  requirements.txt  search.html  searchindex.js
_modules/: index.html
_modules/pyscDesign3/: _core.html
_modules/scDesign3Py/: _core.html
_sources/: index.rst.txt
_sources/set_up/: API.rst.txt  Installation.md.txt
_sources/tutorial/: all_in_one.ipynb.txt  bpparam.ipynb.txt  lrt.ipynb.txt  plot.ipynb.txt  quick_start.ipynb.txt  stepwise.ipynb.txt
docs/: environment.yaml  requirements.txt
docs/source/: conf.py  index.rst
examples/data_simu/: ATAC.html  CITE.html  cell_lib_size.html  deconvolution.html  index.html  mul_lineage.html  mul_omic.html  spatial.html
examples/model_alter/: DE_cell.html  DE_spatial.html  DE_traj.html  index.html  with_without_batch.html  with_without_condition.html
examples/model_para/: comp_gau_vine.html  index.html  marg_para.html
examples/model_select/: eva_cluster.html  eva_pseudotime.html  index.html
pyscDesign3/: __init__.py  _core.py
pyscDesign3/_utils/: _format.py
pyscDesign3/tools/: get_bpparam.py  lrt.py  plot.py
scDesign3/: __init__.py  _core.py
scDesign3/_utils/: _errors.py  _format.py
scDesign3/tools/: get_bpparam.py  (+2 more)
scDesign3Py/: __init__.py  _core.py
set_up/: API.html  Installation.html  info.html
test/: get_data.R  test.R  test.ipynb  test.rmd
tutorial/: all_in_one.html  bpparam.html  lrt.html  plot.html  quick_start.html  stepwise.html
(+136 files in other folders)
