[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "scDesign3Py"
version = "1.0.0"
description = "The python interface for scDesign3 R package."
readme = "README.md"
authors = [{ name = "Di Liu", email = "liudi654@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "rpy2",
    "anndata",
    "matplotlib",
    "seaborn",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/JSB-UCLA/scDesign3Py/"